set: add set 2, challange 11

--- a/challenges/Cargo.toml
+++ b/challenges/Cargo.toml
@@ -8,5 +8,5 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.63"
 
-[dependencies.core]
-path = "../core"
+[dependencies.crypt]
+path = "../crypt"
