--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 clap = { version = "3.0.7", features = ["cargo"] }
+openssl = "0.10"
 
 [dependencies.crypt]
 path = "../crypt"
